--- a/BanglaGig/banglagig/src/index.css
+++ b/BanglaGig/banglagig/src/index.css
@@ -12,3 +12,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#carousel1{
+  max-height: 700px;
+}
